AGREGANDO FUNCIONALIDAD AUTO COMPLETADO COMBOBOX UTILIZANDO CONTROLES SWINGX

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.JPanelSlider.jar=lib/JPanelSlider.jar
 file.reference.png-encoder-1.5.jar=lib/png-encoder-1.5.jar
 file.reference.poi-3.7-20101029.jar=lib/poi-3.7-20101029.jar
+file.reference.swingx-all-1.6.4.jar=lib/swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -63,7 +64,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.JPanelSlider.jar}:\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
