--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoFarmaciaHibernate
+application.vendor=Geek
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,6 +25,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/ProyectoFarmaciaHibernate.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.ant-1.7.1.jar=lib/ant-1.7.1.jar
 file.reference.antlr-2.7.5.jar=lib/antlr-2.7.5.jar
@@ -67,7 +69,6 @@ file.reference.httpclient-4.3.4.jar=lib/httpclient-4.3.4.jar
 file.reference.httpcore-4.3.2.jar=lib/httpcore-4.3.2.jar
 file.reference.iText-2.1.7.jar=lib/iText-2.1.7.jar
 file.reference.iText-2.1.7.js2.jar=lib/iText-2.1.7.js2.jar
-file.reference.jackson-annotations-2.1.4.jar=lib/jackson-annotations-2.1.4.jar
 file.reference.jackson-core-2.1.4.jar=lib/jackson-core-2.1.4.jar
 file.reference.jackson-databind-2.1.4.jar=lib/jackson-databind-2.1.4.jar
 file.reference.jasperreports-5.6.0.jar=lib/jasperreports-5.6.0.jar
@@ -82,11 +83,11 @@ file.reference.jfreechart-1.0.12.jar=lib/jfreechart-1.0.12.jar
 file.reference.jpa.jar=lib/jpa.jar
 file.reference.JPanelSlider.jar=lib/JPanelSlider.jar
 file.reference.jxl-2.6.10.jar=lib/jxl-2.6.10.jar
-file.reference.log4j-1.2.15.jar=lib/log4j-1.2.15.jar
 file.reference.lucene-analyzers-common-4.5.1.jar=lib/lucene-analyzers-common-4.5.1.jar
 file.reference.lucene-core-4.5.1.jar=lib/lucene-core-4.5.1.jar
 file.reference.lucene-queryparser-4.5.1.jar=lib/lucene-queryparser-4.5.1.jar
 file.reference.mondrian-3.1.1.12687.jar=lib/mondrian-3.1.1.12687.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
 file.reference.olap4j-0.9.7.309-JS-3.jar=lib/olap4j-0.9.7.309-JS-3.jar
 file.reference.png-encoder-1.5.jar=lib/png-encoder-1.5.jar
 file.reference.poi-3.10.1.jar=lib/poi-3.10.1.jar
@@ -101,7 +102,7 @@ file.reference.serializer.jar=lib/serializer.jar
 file.reference.servlet-api-2.4.jar=lib/servlet-api-2.4.jar
 file.reference.spring-beans-2.5.5.jar=lib/spring-beans-2.5.5.jar
 file.reference.spring-core-2.5.5.jar=lib/spring-core-2.5.5.jar
-file.reference.swingx-all-1.6.4.jar=lib/swingx-all-1.6.4.jar
+file.reference.swingx-1.6.jar=lib/swingx-1.6.jar
 file.reference.velocity-1.7-dep.jar=lib/velocity-1.7-dep.jar
 file.reference.xalan-2.7.1.jar=lib/xalan-2.7.1.jar
 file.reference.xercesImpl-2.10.0.jar=lib/xercesImpl-2.10.0.jar
@@ -119,17 +120,15 @@ javac.classpath=\
     ${file.reference.groovy-all-1.7.5.jar}:\
     ${file.reference.iText-2.1.7.jar}:\
     ${file.reference.png-encoder-1.5.jar}:\
+    ${libs.hibernate-support.classpath}:\
     ${file.reference.poi-3.7-20101029.jar}:\
     ${file.reference.edisoncorSX.jar}:\
     ${libs.ejb3-persistence.classpath}:\
-    ${libs.hibernate-support.classpath}:\
-    ${libs.hibernate-persistence.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.JPanelSlider.jar}:\
     ${libs.swing-layout.classpath}:\
-    ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.ant-1.7.1.jar}:\
     ${file.reference.antlr-2.7.5.jar}:\
     ${file.reference.barbecue-1.5-beta1.jar}:\
@@ -163,7 +162,6 @@ javac.classpath=\
     ${file.reference.httpclient-4.3.4.jar}:\
     ${file.reference.httpcore-4.3.2.jar}:\
     ${file.reference.iText-2.1.7.js2.jar}:\
-    ${file.reference.jackson-annotations-2.1.4.jar}:\
     ${file.reference.jackson-core-2.1.4.jar}:\
     ${file.reference.jackson-databind-2.1.4.jar}:\
     ${file.reference.jaxen-1.1.1.jar}:\
@@ -171,7 +169,6 @@ javac.classpath=\
     ${file.reference.jfreechart-1.0.12.jar}:\
     ${file.reference.jpa.jar}:\
     ${file.reference.jxl-2.6.10.jar}:\
-    ${file.reference.log4j-1.2.15.jar}:\
     ${file.reference.lucene-analyzers-common-4.5.1.jar}:\
     ${file.reference.lucene-core-4.5.1.jar}:\
     ${file.reference.lucene-queryparser-4.5.1.jar}:\
@@ -199,7 +196,11 @@ javac.classpath=\
     ${file.reference.castor-1.2.jar}:\
     ${file.reference.jdt-compiler-3.1.1.jar}:\
     ${file.reference.poi-ooxml-3.7-20101029.jar}:\
-    ${file.reference.poi-ooxml-schemas-3.7-20101029.jar}
+    ${file.reference.poi-ooxml-schemas-3.7-20101029.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.swingx-1.6.jar}:\
+    ${libs.hibernate-persistence.classpath}:\
+    ${libs.hibernate4-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
