--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,6 +1,7 @@
 libs.absolutelayout.classpath=\
     ${base}/absolutelayout/AbsoluteLayout.jar:\
-    ${base}/absolutelayout/JasperReports/
+    ${base}/absolutelayout/JasperReports/:\
+    ${base}/groovy-all-2.0.1.jar
 libs.absolutelayout.displayName=Absolute Layout
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
