SE AGREGO LA OPCION AL EVENTO DOBLE CLICK EN VENTAS Y COMPRAS SE MUESTRA EL DETALLE DE UNA VENTA O UNA COMPRA. AGREGANDOLE ESTILOS A LA TABLA Y LA INFORMACION PERTINENTE A CADA DETALLE

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -111,7 +111,9 @@ file.reference.xml-apis-ext.jar=lib/xml-apis-ext.jar
 file.reference.xml-apis.jar=lib/xml-apis.jar
 file.reference.xmlbeans-2.5.0.jar=lib/xmlbeans-2.5.0.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.commons-beanutils-1.8.0.jar}:\
     ${file.reference.commons-collections-2.1.1.jar}:\
@@ -227,7 +229,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.app.Principal
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=com.app.InicioSe
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
